Format using intellij default styling